Tue Feb 10 18:33:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3565_Regression/*
          New test for bugzilla 3565

        * tests/Bug_3566_Regression/*
          New test for bugzilla 3566

Tue Feb 10 18:32:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Naming/Naming_Loader.cpp:
          No need for intermediate variable

Tue Feb 10 18:31:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/catior/test.bat:
          Updated for catior rename

Tue Feb 10 18:29:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/RTCORBA/RT_Mutex.h:
          Made destructor public to fix GCC 4.4 compile errors

Tue Feb 10 05:39:28 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * NEWS:
          revision bump.

Tue Feb 10 05:19:18 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * ChangeLogs/ChangeLog-09a:

          Added this file.

Mon Feb 09 12:01:28 CST 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * TAO version 1.6.8 released.

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: