@@ -8,21 +8,19 @@ eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}'
 # This is a Perl script that tests AMH exceptions
 
 use lib "$ENV{ACE_ROOT}/bin";
-use PerlACE::Run_Test;
+use PerlACE::TestTarget;
 
-# File used to pass AMH server ior to its clients.
-# This file name is hard-coded in the server.cpp and client.cpp files
-$iorfile = PerlACE::LocalFile("test.ior");
+my $server = PerlACE::TestTarget::create_target (1) || die "Create target 1 failed\n";
+my $client = PerlACE::TestTarget::create_target (2) || die "Create target 2 failed\n";
 
-unlink $iorfile;
+my $iorbase = "test.ior";
+my $server_iorfile = $server->LocalFile ($iorbase);
+my $client_iorfile = $client->LocalFile ($iorbase);
+$server->DeleteFile($iorbase);
+$client->DeleteFile($iorbase);
 
-if (PerlACE::is_vxworks_test()) {
-  $AMH = new PerlACE::ProcessVX ("server", "");
-}
-else {
-  $AMH = new PerlACE::Process ("server", "");
-}
-$CL = new PerlACE::Process ("client", "");
+$AMH = $server->CreateProcess ("server", "");
+$CL = $client->CreateProcess ("client", "");
 
 # Run the AMH server.
 $sv = $AMH->Spawn ();
@@ -32,16 +30,15 @@ if ($sv != 0) {
    exit 1;
 }
 
-if (PerlACE::waitforfile_timed ($iorfile, $PerlACE::wait_interval_for_process_creation) == -1) {
-    print STDERR "ERROR: File containing AMH Server ior,".
-        " <$iorfile>, cannot be found\n";
-    $AMH->Kill ();
+if ($server->WaitForFileTimed ($iorbase,
+                               $server->ProcessStartWaitInterval()) == -1) {
+    print STDERR "ERROR: cannot find file <$server_iorfile>\n";
+    $SV->Kill (); $SV->TimedWait (1);
     exit 1;
 }
 
 # Run the client.
 $client = $CL->Spawn ();
-
 
 # Clean up.
 
@@ -51,13 +48,13 @@ if ($client != 0) {
     $status = 1;
 }
 
-
 $amhserver= $AMH->WaitKill (60);
 if ($amhserver != 0) {
     print STDERR "ERROR: AMH Server returned $amhserver\n";
     $status = 1;
 }
 
-unlink $iorfile;
+$server->DeleteFile($iorbase);
+$client->DeleteFile($iorbase);
 
 exit $status;
