@@ -6,41 +6,43 @@ eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}'
 # -*- perl -*-
 
 use lib "$ENV{ACE_ROOT}/bin";
-use PerlACE::Run_Test;
+use PerlACE::TestTarget;
 
 $status = 0;
-$iorfile = PerlACE::LocalFile ("server.ior");
 
-unlink $iorfile;
+my $server = PerlACE::TestTarget::create_target (1) || die "Create target 1 failed\n";
+my $client = PerlACE::TestTarget::create_target (2) || die "Create target 2 failed\n";
 
-if (PerlACE::is_vxworks_test()) {
-    $SV = new PerlACE::ProcessVX ("server", "-d -o server.ior");
-}
-else {
-    $SV = new PerlACE::Process ("server", "-d -o $iorfile");
-}
-$CL = new PerlACE::Process ("client", "-k file://$iorfile");
+my $iorbase = "server.ior";
+my $server_iorfile = $server->LocalFile ($iorbase);
+my $client_iorfile = $client->LocalFile ($iorbase);
+$server->DeleteFile($iorbase);
+$client->DeleteFile($iorbase);
 
-$SV->Spawn ();
+$SV = $server->CreateProcess ("server", "-d -o $server_iorfile");
+$CL = $client->CreateProcess ("client", "-k file://$client_iorfile");
+$server_status = $SV->Spawn ();
 
-if (PerlACE::waitforfile_timed ($iorfile, $PerlACE::wait_interval_for_process_creation) == -1) {
-    print STDERR "ERROR: cannot find file <$iorfile>\n";
-    $SV->Kill ();
+if ($server_status != 0) {
+    print STDERR "ERROR: server returned $server_status\n";
     exit 1;
 }
 
-$client = $CL->SpawnWaitKill (120);
-$server = $SV->TerminateWaitKill (5);
-
-unlink $iorfile;
-
-if ($client != 0) {
-    print STDERR "ERROR: client returned $client\n";
-    $status = 1;
+if ($server->WaitForFileTimed ($iorbase,
+                               $server->ProcessStartWaitInterval()) == -1) {
+    print STDERR "ERROR: cannot find file <$server_iorfile>\n";
+    $SV->Kill (); $SV->TimedWait (1);
+    exit 1;
 }
 
-if ($server != 0) {
-    print STDERR "ERROR: server returned $server\n";
+$client_status = $CL->SpawnWaitKill (120);
+$server_status = $SV->TerminateWaitKill (5);
+
+$server->DeleteFile($iorbase);
+$client->DeleteFile($iorbase);
+
+if ($client_status != 0) {
+    print STDERR "ERROR: client returned $client_status\n";
     $status = 1;
 }
 
