@@ -6,43 +6,50 @@ eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}'
 # -*- perl -*-
 
 use lib "$ENV{ACE_ROOT}/bin";
-use PerlACE::Run_Test;
+use PerlACE::TestTarget;
+
+my $server = PerlACE::TestTarget::create_target (1) || die "Create target 1 failed\n";
+my $client = PerlACE::TestTarget::create_target (2) || die "Create target 2 failed\n";
+my $t3 = PerlACE::TestTarget::create_target (3) || die "Create target 3 failed\n";
 
 $status = 0;
-$iorfile = PerlACE::LocalFile ("test.ior");
 
-unlink $iorfile;
+my $iorbase = "test.ior";
+my $server_iorfile = $server->LocalFile ($iorbase);
+my $client_iorfile = $client->LocalFile ($iorbase);
+$server->DeleteFile($iorbase);
+$client->DeleteFile($iorbase);
 
-if (PerlACE::is_vxworks_test()) {
-    $SV = new PerlACE::ProcessVX ("server", "-o test.ior");
-    $T = new PerlACE::ProcessVX ("OctetSeq", "-n 32 -l 8192 -h 8192 -s 1 -q");
-}
-else {
-    $SV = new PerlACE::Process ("server", "-o $iorfile");
-    $T = new PerlACE::Process ("OctetSeq", "-n 32 -l 8192 -h 8192 -s 1 -q");
-}
+$SV = $server->CreateProcess ("server", "-o $server_iorfile");
+$T = $client->CreateProcess ("OctetSeq", "-n 32 -l 8192 -h 8192 -s 1 -q");
 $CL = new PerlACE::Process ("client", "-i 5000 -k file://$iorfile");
 
 print STDERR "\n\n==== Octet sequence passing test\n";
 
-$SV->Spawn ();
+$server_status = $SV->Spawn ();
 
-if (PerlACE::waitforfile_timed ($iorfile, $PerlACE::wait_interval_for_process_creation) == -1) {
-    print STDERR "ERROR: cannot find file <$iorfile>\n";
-    $SV->Kill ();
+if ($server_status != 0) {
+    print STDERR "ERROR: server returned $server_status\n";
     exit 1;
 }
 
-$client = $CL->SpawnWaitKill (120);
+if ($server->WaitForFileTimed ($iorbase,
+                               $server->ProcessStartWaitInterval()) == -1) {
+    print STDERR "ERROR: cannot find file <$server_iorfile>\n";
+    $SV->Kill (); $SV->TimedWait (1);
+    exit 1;
+}
 
-if ($client != 0) {
-    print STDERR "ERROR: client returned $client\n";
+$client_status = $CL->SpawnWaitKill ($client->ProcessStartWaitInterval() + 100);
+
+if ($client_status != 0) {
+    print STDERR "ERROR: client returned $client_status\n";
     $status = 1;
 }
 
-$server = $SV->WaitKill (25);
+$server_status = $SV->WaitKill (25);
 
-if ($server != 0) {
+if ($serveserver_status != 0) {
     print STDERR "ERROR: server returned $server\n";
     $status = 1;
 }
@@ -56,6 +63,7 @@ if ($test != 0) {
     $status = 1;
 }
 
-unlink $iorfile;
+$server->DeleteFile($iorbase);
+$client->DeleteFile($iorbase);
 
 exit $status;
